Dashboard: Added useFetch hook, fetcher func and session endpoint

--- a/frontend-dashboard/src/pages/project/[projectId]/session/[sessionId]/index.astro
+++ b/frontend-dashboard/src/pages/project/[projectId]/session/[sessionId]/index.astro
@@ -1,11 +1,12 @@
 ---
 import Layout from '../../../../../layouts/Layout.astro';
+import Logs from '../../../../../components/Session/Logs';
 
 export interface Props {}
 
-const { sessionId } = Astro.params;
+const { sessionId, projectId } = Astro.params;
 ---
 
 <Layout title={`Spot - Session (${sessionId})`}>
-	<main></main>
+	<Logs client:load projectId={projectId} sessionId={sessionId} />
 </Layout>
